add dummy and data info

--- a/views/templates/slct_car.html
+++ b/views/templates/slct_car.html
@@ -18,6 +18,11 @@
             <th>입차시간</th>
             <th>입구명</th>
         </tr>
+        <tr>
+            <td>dummy</td>
+            <td>dummy</td>
+            <td>dummy</td>
+        </tr>
     </table>
 
 {#    pagination#}
