Car - 웹 할인권 적용 프론트 엔드 디자인 수정

--- a/views/templates/car.html
+++ b/views/templates/car.html
@@ -48,10 +48,11 @@
             justify-items: center; /* 가로 방향 가운데 정렬 */
         }
         .button {
+            width: 80px; /* 고정된 너비 */
+            height: 80px; /* 고정된 높이 */
             background-color: #4CAF50;
-            border: 2px solid transparent; /* 테두리를 투명으로 설정 */
+            border: 2px solid transparent;
             color: white;
-            padding: 20px 24px; /* 버튼의 내부 여백을 조정하여 크기를 일정하게 맞춤 */
             text-align: center;
             text-decoration: none;
             display: inline-block;
@@ -60,6 +61,7 @@
             border-radius: 4px;
             outline: none;
         }
+
         .button:hover {
             background-color: #45a049;
         }
