웹 사이트가 열리도록 수정

--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -1,39 +1,10 @@
-{% extends 'base.html' %}
-{% block style %}
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
-</style>
-{% endblock %}
-{% block main %}
-<main>
-    <div class="main1">
-        <div class="main1_1"><a href="/visit/visit">
-            <img class="main1_img1" src="{{ url_for('static', path='/img/main.png') }}"
-                 alt="main1_1"><span class="main1_text1">et cetera Flagship<br> </span></a></div>
-    </div>
-
-
-    <p>&nbsp;</p>
-    <div class="text1">
-
-    </div>
-    <div class="main2">
-        <div class="main2_1"><a href="/shops/list/101">
-            <img class="main2_img1" src="{{ url_for('static', path='/img/main1.png') }}"
-                alt="main2_1"><span class="main2_text1">Sofas</span></a></div>
-
-        <div class="main2_2"><a href="/shops/list/103">
-            <img class="main2_img2" src="{{ url_for('static', path='/img/main2.png') }}"
-                alt="main2_2"><span class="main2_text2">Chairs</span></a></div>
-
-        <div class="main2_3"><a href="/shops/list/201">
-            <img class="main2_img3" src="{{ url_for('static', path='/img/main3.png') }}"
-                alt="main2_3"><span class="main2_text3">Dining</span></a></div>
-        <div class="clearfix"></div>
-    </div>
-
-    <div class="text2">
-
-    </div>
-</main>
-{% endblock %}
+</body>
+</html>
