--- a/views/templates/slct_cp.html
+++ b/views/templates/slct_cp.html
@@ -3,41 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <title>사용집계</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        .slcppg .container-fluid label {
+            margin-bottom:0
+        }
+        .slcppg .hid {
+            display:none;
+        }
+        .table tr:last-child {
+            border-bottom: 1px solid #dee2e6!important;
+        }
+    </style>
 </head>
 <body>
-<h1>사용집계</h1>
-<label for="usmth">사용일</label>
-<input type="month" id="usmth" name="usmth" />
-구분 <input type="radio" name="slctcp" id="slctmon"> <label for="slctmon">월별</label> <input type="radio" name="slctcp" id="slctday"> <label for="slctday">일별</label>
-<button>조 회</button>
+<div class="slcppg">
+    <h2 class="container-fluid my-3">사용집계</h2>
+    <div class="container-fluid my-3" style="line-height:38px">
+        <div class="d-inline-block">
+            <div class="mon">
+                <label class="" for="usmth">사용월</label>
+                <input type="month" id="usmth" class="bg-white text-dark text-center" name="usmth" />
+            </div>
+            <div class="dt hid">
+                <label class="" for="usdt">사용일</label>
+                <input type="date" id="usdt" class="bg-white text-dark text-center" name="usdt" />
+            </div>
+        </div>
+        <div class="d-inline-block">
+            <span class="mr-3">구분</span>
+            <input type="radio" name="slctcp" id="slctmon" class="px-1 pr-2" value="slctmon" checked> <label for="slctmon" class="px-1 pr-3">월별</label>
+            <input type="radio" name="slctcp" id="slctday" class="pr-2" value="slctday"> <label for="slctday" class="px-1">일별</label>
+        </div>
+    </div>
+    <div class="container-fluid my-3">
+        <button class="btn btn-primary rounded-0">조 회</button>
+    </div>
 
-<table>
-    <tr>
-        <th>사용월</th>
-        <th>할인종류</th>
-        <th>결제구분</th>
-        <th>사용매수</th>
-    </tr>
-    {% if row %}{% else %}
+
+    <table class="table my-3">
         <tr>
-            <td colspan="3">쿠폰 사용 정보가 없습니다.</td>
+            <th class="tablemth">사용월</th>
+            <th class="tabledt hid">사용일</th>
+            <th>할인종류</th>
+            <th>결제구분</th>
+            <th>사용매수</th>
         </tr>
-    {% endif %}
-    {% for cp in cplist %}
-    <tr>
-        <td>dummy</td>
-        <td>dummy</td>
-        <td>dummy</td>
-        <td>dummy</td>
-    </tr>
-    {% endfor %}
-</table>
+        {% if row %}
+        {% for cp in cplist %}
+            <tr>
+                <td>{{ cp.disc_time }}</td>
+                <td>{{ cp.disc }}</td>
+                <td>결제 완료</td>
+                <td>1</td>
+            </tr>
+        {% endfor %}
+        {% else %}
+            <tr>
+                <td colspan="4" class="text-center py-5">쿠폰 사용 정보가 없습니다.</td>
+            </tr>
+        {% endif %}
+    </table>
 
-<button>EXCEL</button>
+    <div class="container-fluid my-3">
+        <button class="btn btn-outline-dark rounded-0">EXCEL</button>
+    </div>
+</div>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-    document.getElementById('usmth').value = new Date().toISOString().slice(0, 7);
-    document.getElementById('usmth').max = new Date().toISOString().slice(0, 7);
+    nowmth = new Date().toISOString().slice(0, 7);
+    nowdt = new Date().toISOString().substring(0, 10);
+
+    document.getElementById('usmth').value = nowmth;
+    document.getElementById('usmth').max = nowmth;
+
+    document.getElementById('usdt').value = nowdt;
+    document.getElementById('usdt').max = nowdt;
+
+    document.querySelector('#slctmon').addEventListener("click", () => {
+        document.querySelector('.mon').classList.remove('hid');
+        document.querySelector('.dt').className += ' hid';
+    });
+
+    document.querySelector('#slctday').addEventListener("click", () => {
+        document.querySelector('.mon').className += ' hid';
+        document.querySelector('.dt').classList.remove('hid');
+    });
+
+    console.log();
 </script>
 
 </body>
