--- a/views/templates/base.html
+++ b/views/templates/base.html
@@ -6,9 +6,8 @@
     <title>Web Parking Discount System</title>
 
     <!-- Tailwind CSS 호출 -->
-    <link href="{{url_for('static',path='/css/app.css')}}"
-          rel="stylesheet"
-    />
+{#    <link href="{{url_for('static', path='/css/app.css')}}" rel="stylesheet">#}
+    <link href="{{url_for('static', path='/css/app2.css')}}" rel="stylesheet">
 
 {#    <!-- 부트스트랩 -->#}
 {#    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">#}
@@ -29,7 +28,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbit&display=swap" rel="stylesheet">
-
 
     {% block style %} {% endblock %}
 </head>
