--- a/views/templates/coupon_log.html
+++ b/views/templates/coupon_log.html
@@ -54,7 +54,7 @@
                     <nav class="grid items-start px-4 text-sm font-medium">
                         <a
                                 class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="discount"
+                                href="./discount"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -73,29 +73,29 @@
                             </svg>
                             할인적용
                         </a>
-{#                        <a#}
-{#                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"#}
-{#                                href="#"#}
-{#                        >#}
-{#                            <svg#}
-{#                                    xmlns="http://www.w3.org/2000/svg"#}
-{#                                    width="24"#}
-{#                                    height="24"#}
-{#                                    viewBox="0 0 24 24"#}
-{#                                    fill="none"#}
-{#                                    stroke="currentColor"#}
-{#                                    stroke-width="2"#}
-{#                                    stroke-linecap="round"#}
-{#                                    stroke-linejoin="round"#}
-{#                                    class="h-4 w-4"#}
-{#                            >#}
-{#                                <path d="m7.5 4.27 9 5.15"></path>#}
-{#                                <path d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"></path>#}
-{#                                <path d="m3.3 7 8.7 5 8.7-5"></path>#}
-{#                                <path d="M12 22V12"></path>#}
-{#                            </svg>#}
-{#                            차량 조회#}
-{#                        </a>#}
+                        {#                        <a#}
+                        {#                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"#}
+                        {#                                href="#"#}
+                        {#                        >#}
+                        {#                            <svg#}
+                        {#                                    xmlns="http://www.w3.org/2000/svg"#}
+                        {#                                    width="24"#}
+                        {#                                    height="24"#}
+                        {#                                    viewBox="0 0 24 24"#}
+                        {#                                    fill="none"#}
+                        {#                                    stroke="currentColor"#}
+                        {#                                    stroke-width="2"#}
+                        {#                                    stroke-linecap="round"#}
+                        {#                                    stroke-linejoin="round"#}
+                        {#                                    class="h-4 w-4"#}
+                        {#                            >#}
+                        {#                                <path d="m7.5 4.27 9 5.15"></path>#}
+                        {#                                <path d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"></path>#}
+                        {#                                <path d="m3.3 7 8.7 5 8.7-5"></path>#}
+                        {#                                <path d="M12 22V12"></path>#}
+                        {#                            </svg>#}
+                        {#                            차량 조회#}
+                        {#                        </a>#}
                         {#                        <a#}
                         {#                                class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"#}
                         {#                                href="#"#}
@@ -143,8 +143,8 @@
                         {#                            Stock#}
                         {#                        </a>#}
                         <a
-                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"
-                                href="#"
+                                class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
+                                href="./search"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -164,8 +164,8 @@
                             시간대 검색
                         </a>
                         <a
-                                class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="./coupon"
+                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"
+                                href="#"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
