--- a/views/templates/discount.html
+++ b/views/templates/discount.html
@@ -53,8 +53,8 @@
                 <div class="flex-1 overflow-auto py-2">
                     <nav class="grid items-start px-4 text-sm font-medium">
                         <a
-                                class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
-                                href="discount"
+                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"
+                                href="#"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
@@ -143,8 +143,8 @@
                         {#                            Stock#}
                         {#                        </a>#}
                         <a
-                                class="flex items-center gap-3 rounded-lg bg-gray-100 px-3 py-2 text-gray-900  transition-all hover:text-gray-900 dark:bg-gray-800 dark:text-gray-50 dark:hover:text-gray-50"
-                                href="#"
+                                class="flex items-center gap-3 rounded-lg px-3 py-2 text-gray-500 transition-all hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-50"
+                                href="./search"
                         >
                             <svg
                                     xmlns="http://www.w3.org/2000/svg"
