--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block style %}
+{#    <style>.inline-flex.items-center.justify-center.whitespace-nowrap.rounded-md.text-sm.font-medium.ring-offset-background.transition-colors.focus-visible\:outline-none.focus-visible\:ring-2.focus-visible\:ring-ring.focus-visible\:ring-offset-2.disabled\:pointer-events-none.disabled\:opacity-50.bg-primary.text-primary-foreground.h-10.px-4.py-2.w-full:hover {#}
+{#        background-color: rgb(var(--color-primary) / 0.9);#}
+{#    }#}
+{#    </style>#}
     <style>h1, h2, h3, h4, h5, h6 { font-family: 'Libre Franklin', sans-serif; --font-sans: 'Libre Franklin'; }
     </style>
     <style>body { font-family: 'Cormorant Garamond', serif; --font-serif: 'Cormorant Garamond'; }
@@ -12,8 +16,8 @@
         <div class="flex items-center justify-center py-12">
             <div class="mx-auto w-[350px] space-y-6">
                 <div class="space-y-2 text-center">
-                    <h1 class="text-3xl font-bold">Login</h1>
-                    <p class="text-gray-500 dark:text-gray-400">Enter your email and password to access your account.</p>
+                    <h1 class="text-3xl font-bold">웹할인시스템</h1>
+{#                    <p class="text-gray-500 dark:text-gray-400">Enter your email and password to access your account.</p>#}
                 </div>
                 <div class="space-y-4">
                     <div class="space-y-2">
@@ -21,7 +25,7 @@
                                 class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                                 for="email"
                         >
-                            Email
+                            ID
                         </label>
                         <input
                                 class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
