--- a/views/templates/slct_cp.html
+++ b/views/templates/slct_cp.html
@@ -4,7 +4,7 @@
 -->
 <style>
     .hid {
-        display:none!important;
+        display: none !important;
     }
 </style>
 <script src="https://cdn.tailwindcss.com"></script>
@@ -20,11 +20,11 @@
                     <div class="flex space-x-2">
                         <div class="flex items-center space-x-4">
                             <div>
-                                <input id="month" type="radio" name="search" checked />
+                                <input id="month" type="radio" name="search" checked/>
                                 <label for="month">Month</label>
                             </div>
                             <div>
-                                <input id="date" type="radio" name="search" />
+                                <input id="date" type="radio" name="search"/>
                                 <label for="date">Date</label>
                             </div>
                             <div class="flex items-center space-x-2">
@@ -46,7 +46,7 @@
                                 </div>
                                 <button
                                         id="schbtn"
-                                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-2 py-1 text-xs">
+                                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input hover:text-accent-foreground h-10 px-4 py-1 text-xs bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
                                     검색
                                 </button>
                             </div>
@@ -74,18 +74,20 @@
                         </tr>
                         </thead>
                         <tbody class="[&amp;_tr:last-child]:border-0">
-                        {% if row %}
-                        {% for cp in cplist %}
-                        <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-                            <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">{{ cp.disc_time }}</td>
-                            <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">{{ cp.disc }}</td>
-                            <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">결제 구분</td>
-                            <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">1</td>
-                        </tr>
-                        {% endfor %}
+                        {% if cnt %}
+                            {% for cp in cplist %}
+                                <tr class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
+                                    <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">{{ cp.disc_time }}</td>
+                                    <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">{{ cp.disc }}</td>
+                                    <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">유료</td>
+                                    <td class="p-4 align-middle text-center [&amp;:has([role=checkbox])]:pr-0">1</td>
+                                </tr>
+                            {% endfor %}
                         {% else %}
                             <tr class="text-center border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted">
-                                <td colspan="4" class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">쿠폰 사용 정보가 없습니다.</td>
+                                <td colspan="4" class="p-4 align-middle [&amp;:has([role=checkbox])]:pr-0">
+                                    쿠폰 사용 정보가 없습니다.
+                                </td>
                             </tr>
                         {% endif %}
 
@@ -93,7 +95,75 @@
                     </table>
                 </div>
             </div>
-            <button class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-24">
+
+            <nav aria-label="pagination" class="mx-auto flex w-full justify-center" role="navigation">
+                <ul class="flex flex-row items-center gap-1">
+                    <li class="disabled">
+
+                        {% if cpg == 1 %}
+                        <a
+                                class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
+                                aria-label="Go to previous page"
+                        >
+                        {% else %}
+                            <a
+                                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
+                                    aria-label="Go to previous page"
+                                    href="{{ baseurl }}{{ cpg - 1 }}"
+                            >
+                        {% endif %}
+                            <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="24"
+                                    height="24"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    class="h-4 w-4"
+                            >
+                                <path d="m15 18-6-6 6-6"></path>
+                            </svg>
+                            <span>Previous</span>
+                        </a>
+                    </li>
+                    <li class="">
+                        <a
+                                class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
+                                href="#"
+                        >
+                            1
+                        </a>
+                    </li>
+                    <li class="">
+                        <a
+                                class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pr-2.5"
+                                aria-label="Go to next page"
+                                href="#"
+                        >
+                            <span>Next</span>
+                            <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="24"
+                                    height="24"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    stroke="currentColor"
+                                    stroke-width="2"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    class="h-4 w-4"
+                            >
+                                <path d="m9 18 6-6-6-6"></path>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <button class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 w-24 hid">
                 EXCEL
             </button>
         </div>
@@ -129,9 +199,9 @@
 
         schbtn.addEventListener('click', () => {
             let skey = "";
-            if (mthrdo.checked){
+            if (mthrdo.checked) {
                 skey = document.querySelector('#monthInput').value;
-            }else if (dtrdo.checked){
+            } else if (dtrdo.checked) {
                 skey = document.querySelector('#dateInput').value;
             }
 
@@ -159,6 +229,7 @@
     // input 창에 현재 검색어 표시
     let crurl = location.pathname.split('/');
     console.log(crurl);
+
     function updateContent() {
         if (crurl[1] === 'cplist' && crurl[2]) {
             let pval = decodeURI(crurl[2]);
