--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -59,41 +59,13 @@
             </div>
         </div>
         <div class="hidden lg:block">
-            <div aria-roledescription="carousel" class="relative h-full" role="region">
-                <div class="overflow-hidden">
-                    <div class="flex -ml-4">
-                        <div aria-roledescription="slide" class="min-w-0 shrink-0 grow-0 basis-full pl-4" role="group">
-                            <img
-                                    src="/placeholder.svg"
-                                    alt="Drone Image 1"
-                                    width="1920"
-                                    height="1080"
-                                    class="h-full w-full object-cover"
-                                    style="aspect-ratio:1920/1080;object-fit:cover"
-                            />
-                        </div>
-                        <div aria-roledescription="slide" class="min-w-0 shrink-0 grow-0 basis-full pl-4" role="group">
-                            <img
-                                    src="/placeholder.svg"
-                                    alt="Drone Image 2"
-                                    width="1920"
-                                    height="1080"
-                                    class="h-full w-full object-cover"
-                                    style="aspect-ratio:1920/1080;object-fit:cover"
-                            />
-                        </div>
-                        <div aria-roledescription="slide" class="min-w-0 shrink-0 grow-0 basis-full pl-4" role="group">
-                            <img
-                                    src="/placeholder.svg"
-                                    alt="Drone Image 3"
-                                    width="1920"
-                                    height="1080"
-                                    class="h-full w-full object-cover"
-                                    style="aspect-ratio:1920/1080;object-fit:cover"
-                            />
-                        </div>
-                    </div>
-                </div>
+            <div class="relative h-full">
+                <img
+                        src="../static/img/login_main.webp"
+                        alt="Main image"
+                        class="absolute inset-0 h-full w-full object-cover"
+                        style="aspect-ratio:1920/1080"
+                />
             </div>
         </div>
     </div>
