--- a/views/static/css/app.css
+++ b/views/static/css/app.css
@@ -1285,6 +1285,11 @@ video {
     border-color: rgb(31 41 55 / var(--tw-border-opacity));
   }
 
+  .bg-indigo-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+  }
+
   .dark\:bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
